--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <h1>Play Asteroids</h1>
     <canvas id="screen" width="760" height="480"></canvas>
     <h2>Instructions</h2>
+  <u1>
+    <li> WASD/arrow keys to move.</li>
+    <li> fire lasers with space. </li>
+    <li> r to teleport randomly on screen. </li>
+  </u1>
     <script type="text/javascript" src="bundle.js"></script>
   </body>
 </html>
